<resources>
    <string name="app_name">D.Tellez</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email2">Email:</string>
    <string name="id2">Id:</string>
    <string name="usuari">Usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="login">Login</string>
    <string name="add_task">Add Task</string>
    <string name="date_created">Date created:</string>
    <string name="task_text">Text:</string>
    <string name="hora_visita">Hora visita:</string>
    <string name="button_set">Set</string>
    <string name="nombre_cliente">Time limit:</string>
    <string name="button_save">Save</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_tasks">Tasks</string>
    <string name="title_activity_nd">NDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash_screen">D.Tellez</string>
    <string name="titol1_perruqueria">D.Tellez</string>
    <string name="title_activity_activitat_client">ActivitatClient</string>
    <string name="title_home">Cliente</string>
    <string name="title_dashboard">Calendario</string>
    <string name="title_notifications">Estadisticas</string>

    <string-array name="productes_comprar">
        <item>Crema cara</item>
        <item>Laca</item>
        <item>Cera</item>
        <item>Polvos</item>
        <item>Champú</item>
        <item>Aceite barba</item>
        <item>Gomina</item>
    </string-array>

</resources>
