<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:measureWithLargestChild="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:baselineAligned="false"
        android:padding="2dp"
        android:showDividers="beginning|middle|end">


        <TextView
            android:id="@+id/at_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora_visita"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="3dp"/>


        <Button
            android:id="@+id/afegir_client_hora_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_set"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="3dp"
            android:textColor="#FFFFFF"
            android:background="#3F51B5"
            android:fontFamily="@font/technasansregular"
            android:onClick="onClickHoraClient"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:baselineAligned="false"
        android:padding="2dp"
        android:showDividers="beginning|middle|end">

        <TextView
            android:id="@+id/at_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_cliente"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="3dp"/>
        <EditText
            android:id="@+id/afegir_client_nom"
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="0.4"
            android:layout_margin="3dp"
            android:background="#D9DFF8"
            android:inputType="textPersonName"
            android:gravity="center|center_vertical"/>
    </LinearLayout>

</LinearLayout>